--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <img src="https://www.figma.com/file/pNG3CCNykE5AH4GgeBvOUB/developer-porttfolio?type=design&node-id=22-299&mode=design&t=834tFylGG5Nv7Hmd-0" alt="">
+    <title>Portfolio website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <main>
+        <nav>
+            <h3 class="k">Ma<span id="c">r</span>y</h3>
+            <ul>
+                    <li ><a class="a" href="Portfolio">Portfolio</a></li>
+                    <li ><a class="a" href="Blog">Blog</a></li>
+                    <li><button>Hire me</button></li>
+            </ul>
+        </nav>
+    </main>
 </body>
 </html>
