--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="header">
     <main>
         <nav>
             <h3 class="k">Ma<span id="c">r</span>y</h3>
@@ -19,6 +20,17 @@
                     <li><button>Hire me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div>
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved momments.</p>
+                <button class="o">Download CV</button>
+                <button class="o">Contact</button>
+           </div>
+           <img src="images/hardy.png" alt="" class="profile-pic">
+           </div>
     </main>
+</header>
 </body>
 </html>
