--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <header class="header">
-    <main>
         <nav>
             <h3 class="k">Ma<span id="c">r</span>y</h3>
             <ul>
@@ -21,7 +20,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
+            <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved momments.</p>
@@ -30,7 +29,15 @@
            </div>
            <img src="images/hardy.png" alt="" class="profile-pic">
            </div>
+        </header>
+    <main>
+        <section class="about">
+            <h3 class="section-title">  About Me</h3>
+            <section>
+                <p class="section-description">
+                    I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+                </p>
+        </section>
     </main>
-</header>
 </body>
 </html>
