--- a/index.html
+++ b/index.html
@@ -63,28 +63,89 @@
             <p class="p">
                 I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
             </p>
-            <div class="skill">
-                <div class="skill">
-                    <img src="images/icons/js.png" alt="">
-                    <h3 class="skill-title">Vanilla Javascript</h3>
-                    <p class="skill-description">
-                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <div class="skill-content">
+                <div class="skill"style="display: flex;">
+                    <img src="images/icons/js.png" alt=""width="50px" height="50px">
+                    <h3 class="skill-title"style="display: flex;">Vanilla Javascript </h3>
+                    <p class="skill-description"style="display: flex;">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, facere!</p>
                 </div>
-                <div class="skill">
-                    <img src="images/icons/react.png" alt="">
-                    <h3 class="skill-title">React</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                
+                <div class="skill"style="display: flex;">
+                    <img src="images/icons/react.png" alt=""width="50px" height="50px">
+                    <h3 class="skill-title"style="display: flex;">React</h3>
+                    <br>
+                    <p class="skill-description"style="display: flex;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, corrupti!    
+                    </p>
                 </div>
-                <div class="skill">
-                    <img src="images/icons/nodejs.png" alt="">
-                    <h3 class="skill-title">Node.js</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                <div class="skill"style="display: flex;">
+                    <img src="images/icons/nodejs.png" alt=""width="50px" height="50px">
+                    <h3 class="skill-title"style="display: flex;">Node.js</h3>
+                    <p style="display: flex;" class="skill-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, dignissimos!</p>
                 </div>
-                <div class="skill">
-                    <img src="images/icons/mongo.png" alt="">
+                <div class="skill" style="display: flex;">
+                    <img src="images/icons/mongo.png" alt="" width="50px" height="50px">
                     <h3 class="skill-title">MongoDB</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
                 </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h3 class="resume-title">A Summary of My Resume</h3>
+
+            <div class="resume-container">
+                <div class="resume-column">
+                    <div class="resume-column">
+                        <h1 class="resume-column-title">My Education</h1>
+                    </div>
+                    <div class="resume-column">
+                        <h3 class="resume-column-title">My Experience</h3>
+                            <h2 class="resume-item">Master in computer engeneering</h2>
+                            <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-institute">
+                                List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            <hr>
+                            <h3 class="resume-column-title"></h3>
+                            <h2 class="resume-item">Master in Computer Engineering</h2>
+                            <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-institute">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                            <hr>
+                            <h3 class="resume-column-title"></h3>
+                            <h2 class="resume-item">Master in Computer Engineering</h2>
+                            <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-institute">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                                <div>
+                                    <h1 class="resume-column-title">My Experience</h1>
+                                    <h2 class="resume-column-title">Sr.Front End developer</h2>
+                                    <h3 class="resume-item">Apple Inc\2020 current</h3>
+                                    <p class="resume-item-institute">
+                                        List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                                    </p>
+                                </div>
+                                <hr>
+                                <div class="resume-column">
+                                    <h2 class="resume-column-title">Sr.Front End developer</h2>
+                                    <h3 class="resume-item">Dribble Inc 2018-2022</h3>
+                                    <p class="resume-item-institute">
+                                        List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                                    </p>
+                                </div>
+                                <hr>
+                                <div class="resume-column">
+                                    <h2 class="resume-column-title">HTML Developer</h2>
+                                    <h3 class="resume-item">Adobe Inc/2017-2018</h3>
+                                    <p class="resume-item-institute">
+                                        List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                                    </p>
+                                </div>
+                    </div>
                 </div>
             </div>
         </section>
