--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="resume-container">
                 <div class="resume-column">
                     <div class="resume-column">
-                        <h1 class="resume-column-title">My Education</h1>
+                        <h1 class="resume-column-title"></h1>
                     </div>
                     <div class="resume-column">
                         <h3 class="resume-column-title">My Experience</h3>
@@ -147,6 +147,9 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
                                 </div>
                     </div>
                 </div>
+            </div>
+            <div class="download-cv">
+                <button class="o"id="ko">Download CV</button>
             </div>
         </section>
     </main>
