--- a/index.html
+++ b/index.html
@@ -153,5 +153,20 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
             </div>
         </section>
     </main>
+    <footer>
+        <div class="social-links">
+            <a href=""><img src="images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title"></h3>
+            <p class="section-description"></p>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title"></h3>
+            <p class="section-description"></p>
+        </div>
+    </footer>
 </body>
 </html>
