--- a/index.html
+++ b/index.html
@@ -160,12 +160,18 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
             <a href=""><img src="" alt=""></a>
         </div>
         <div class="footer-column">
-            <h3 class="section-title"></h3>
-            <p class="section-description"></p>
+            <h3 class="section-title">Let's Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
         </div>
         <div class="footer-column">
-            <h3 class="section-title"></h3>
-            <p class="section-description"></p>
+            <h3 class="section-title">Let's Message me</h3>
+            <form action="">
+                <input type="text" placeholder="Your Name">
+                <input type="text"placeholder="Your Email" >
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message">
+                </textarea>
+                <button class="o">Submit</button>
+            </form>
         </div>
     </footer>
 </body>
